Update Java course